deploy: cb50d1151679ba8c613c044acda407e54509021a

--- a/code/Data_analysis.html
+++ b/code/Data_analysis.html
@@ -2758,7 +2758,7 @@ F1-Score               0.611206            0.635264                 0.581628
 </div>
 </div>
 </div>
-<p>What can be seen is, that <strong>CT</strong> has the highest <strong>accuracy</strong> score, <strong>MD</strong> has the highest <strong>precision</strong> score, <strong>CT</strong> the highest <strong>recall</strong> and <strong>MD</strong> the highest <strong>F1-Score</strong>. <strong>Precision and Recall</strong> values are inversely related. As one increases, the other decreases. So when we relate to the <strong>F1-Score</strong>, <strong>MD</strong> is performs better.</p>
+<p>What can be seen is, that <strong>CT</strong> has the highest <strong>accuracy</strong> score, <strong>MD</strong> has the highest <strong>precision</strong> score, <strong>CT</strong> the highest <strong>recall</strong> and <strong>MD</strong> the highest <strong>F1-Score</strong>. <strong>Precision and Recall</strong> values are inversely related. As one increases, the other decreases. So when we relate to the <strong>F1-Score</strong>, <strong>MD</strong> performs better.</p>
 <p>In the next pages, a different algorithm is applied to the same data.</p>
 </section>
 </section>
